8303374: Compiler Implementation for Primitive types in patterns, instanceof, and switch (Preview)